# ARPAAMS

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  codeql.yml  release.yml
_include/: AllocatePowerCommand.h  AlteraControllerWithTransport.h  AlteraFPGAFactory.h  AntennaArray.h  FaultEvent.h  FrequencySwitchCommand.h  IBeamformingStrategy.h  ICommand.h  IFPGAController.h  IFPGAFactory.h  IFPGARegisterMap.h  IFaultObserver.h  MonopulseStrategy.h  PhasedArrayStrategy.h  RFPayload.h  RFPayloadMonitor.h  RecoveryModule.h  TargetInfo.h  TestConfig.h  TransportI2C.h  TransportSPI.h  XilinxControllerWithTransport.h  XilinxFPGAFactory.h
docs/: Doxyfile  architecture.md
docs/uml/: UML.puml  sequence_diagram.md
scripts/: Create_GitHub_Project_Board_Kanban.ps1
src/: AllocatePowerCommand.cpp  AlteraControllerWithTransport.cpp  AlteraFPGAFactory.cpp  BeamformingEngineContext.h  FaultEvent.cpp  FrequencySwitchCommand.cpp  ICommand.cpp  IFPGARegisterMap.cpp  IFaultObserver.cpp  RFPayload.cpp  RFPayloadMonitor.cpp  RecoveryModule.cpp  TestConfig.cpp  TransportI2C.cpp  TransportSPI.cpp  XilinxControllerWithTransport.cpp  XilinxFPGAFactory.cpp  main.cpp
tests/: CMakeLists.txt  patterns_tests.cpp  test_main.cpp
